# Dueling-DQN

./: .gitignore  README.md  pyproject.toml  test.ipynb
lcs/: results_CartPole-v1_basic.pl  results_CartPole-v1_prop.pl  results_CartPole-v1_rank.pl  results_LunarLander-v3_basic.pl
models/: Dueling_CartPole-v1.pt
src/dueling_dqn/: __init__.py  main.py
src/dueling_dqn/experience_replay/: per.py  sorted_dict.py  sum_tree.py
src/dueling_dqn/model/: arch.py  dueling_dqn.py
src/dueling_dqn/utils/: metrics.py  train.py
tests/: test_sum_tree.py
